fixed issue with nonaligned photos

--- a/static/custom.css
+++ b/static/custom.css
@@ -1,25 +1,52 @@
 .measure-wide {   max-width: 64em; }
 .img-container {
-  float: left;
+  /* float: left; */
   width: 33.33%;
+  /* width: 50%; */
   padding: 10px;
 }
 
-/* Clear floats after image containers */
-/* .imgs-row::after { */
-/*   content: ""; */
-/*   clear: both; */
-/*   display: table; */
-/* } */
+.img-row {
+  display: flex;
+  flex-wrap: wrap;
+  /* for horizontal aligning of child divs */
+  justify-content: center;
+  /* for vertical aligning */
+  /* align-items: center; */
+}
 
-.imgs-row img {
+.img-container img {
   width: 200pt;
 }
 
 .interests {
-  font-size: 11pt;
+  font-size: 11.5pt;
 }
 
-.padded {
-  margin-bottom: 3cm;
-}
+/* .padded { */
+/*   margin-bottom: 1cm; */
+/* } */
+/* .img-container { */
+/*   float: left; */
+/*   width: 33.33%; */
+/*   padding: 10px; */
+/* } */
+
+/* /1* Clear floats after image containers *1/ */
+/* /1* .imgs-row::after { *1/ */
+/* /1*   content: ""; *1/ */
+/* /1*   clear: both; *1/ */
+/* /1*   display: table; *1/ */
+/* /1* } *1/ */
+
+/* .imgs-row img { */
+/*   width: 200pt; */
+/* } */
+
+/* .interests { */
+/*   font-size: 11pt; */
+/* } */
+
+/* .padded { */
+/*   margin-bottom: 3cm; */
+/* } */
